<resources>
    <string name="app_name">BookCastle</string>
    <string name="slogan">Because reading is awesome!</string>
    <string name="try_again">Try again</string>
    <string name="no_internet_connection">Non connecté</string>
    <string name="no_internet_txt">It seems like your device is not connected to the internet.</string>
    <string name="no_internet_notice">If the problem persists, feel free to contact us.</string>
    <string name="not_connected">You are not connected</string>
    <string name="settings"><u>Settings</u></string>
    <string name="new_articles">Nouveautés</string>
    <string name="popular">Popular</string>
    <string name="view_all">Voir tout</string>
    <string name="hello_user">Welcome back, </string>
    <string name="home_message">What do you want to read today?</string>
    <string name="search">Search</string>
    <string name="novel">Novel</string>
    <string name="education">Education</string>
    <string name="science">Science</string>
    <string name="romance">Romance</string>
    <string name="crime">Crime</string>
    <string name="psychology">Psychology</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="language">LANGUAGE</string>
    <string name="description">Overview</string>
    <string name="search_label">Find a Book</string>
    <string name="search_hint">Ex : 120 Laws Of Power</string>
    <string name="reader_s_profile">Reader\'s Profile</string>
    <string name="username">Youssef Mourabiti</string>
    <string name="usermail">mourabitiyoussef@gmail.com</string>
    <string name="manage_your_profile">Manage your Profile</string>
    <string name="daily_goal">Daily Goal</string>
    <string name="you_have_read_0_pages_today">You have read 20 minutes today</string>
    <string name="favourite_books">Favorite Books</string>
    <string name="you_have_0_favourite_books">You have 5 Favorite Books</string>
    <string name="help">Need help? <b>contact us.</b></string>
    <string name="settings_2">Settings</string>
    <string name="download">Download</string>
    <string name="read_now">Read Now</string>
    <string name="get_started_now">Get Started, Now!</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_you_have_an_account_create_one">Don\'t you have an account?</string>
    <string name="create_one">Create One</string>
    <string name="become_the_king_of_your_own_castle">Become the king of your own castle</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="password">Password</string>
    <string name="create_a_castle_from_bricks_and_books">Create a castle from bricks and books</string>
    <string name="i_confirm_that_i_have_read_and_accepted_the_terms_of_use_and_privacy_policy">I confirm that I have read and accepted the Terms of Use and Privacy Policy</string>
    <string name="search_book">Search for a book</string>
    <string name="please_wait">Please wait</string>
    <string name="make_sure_you_remember_your_password">Make sure you remember your password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_new_password">Your new password</string>
    <string name="your_current_password">Your current password</string>
    <string name="change_password">Change Password</string>
    <string name="edit_your_profile_informations">Edit your profile informations</string>
    <string name="update_informations">Update Informations</string>
    <string name="there_are_no_saved_books">There are no saved books</string>
</resources>