<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/df_dialog_layout"
    android:id="@+id/dialogParent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/whiteCardColor"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="295dp"
                android:layout_gravity="center"
                android:src="@drawable/no_internet_image" />

            <TextView
                style="@style/homeHeading"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/headerTextSize"
                android:text="@string/not_connected"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nunito_bold"/>

            <TextView
                android:id="@+id/spinAndWinReward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/TitleText"
                android:textStyle="normal"
                android:textSize="14dp"
                android:text="@string/no_internet_txt"
                android:fontFamily="@font/nunito_semibold"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/btn_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/try_again"
                android:layout_marginTop="20dp"
                android:textColor="@color/whiteTextColor"
                android:background="@drawable/onboarding_button"/>
            <!-- add a go to settings button here -->
            <TextView
                android:id="@+id/settings_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/nunito_semibold"
                android:textSize="17dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>