<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/bottom_sheet_container"
    android:paddingVertical="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_weight="0.8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:fontFamily="@font/poppins"
        android:text="@string/reader_s_profile"
        android:textColor="@color/df_transparent_black_background"
        android:textSize="18sp"
        android:textStyle="bold" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="#54000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/user_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@drawable/pp"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:text="@string/username"
                android:fontFamily="@font/poppins"
                />
            <TextView
                android:id="@+id/usermail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/df_transparent_black_background"
                android:textSize="15sp"
                android:text="@string/usermail"
                android:fontFamily="@font/poppins"
                />
            <Button
                android:id="@+id/settings_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_bg_bordered_button"
                android:text="@string/manage_your_profile"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#54000000" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_alarm_on_24"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                android:text="@string/daily_goal" />
            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:min="0"
                android:max="120"
                android:progress="30"
                app:indicatorColor="@color/breaker"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/progress_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/df_transparent_black_background"
                android:textSize="15sp"
                android:fontFamily="@font/poppins"
                android:text="@string/you_have_read_0_pages_today" />
        </LinearLayout>
        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#54000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="20dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_help"
                    android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:textColor="@color/df_transparent_black_background"
                android:textSize="17sp"
                android:text="@string/help"
                android:fontFamily="@font/poppins"
                />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>