<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="5dp"
            tools:context=".MainActivity">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/scrollTopButton_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:alpha="0.90"
                android:clickable="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/arrow_up" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.527">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="0.1"
                        android:gravity="right"
                        android:src="@drawable/pp" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="0.1"
                        android:gravity="right"
                        android:src="@drawable/pp" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="0.1"
                        android:gravity="right"
                        android:src="@drawable/pp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/welcome_msg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/hello_user"
                        android:textColor="@color/df_transparent_black_background"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="235dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_sb"
                        android:text="@string/home_message"
                        android:textColor="@color/black"
                        android:textFontWeight="0"
                        android:textSize="22dp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/tabLayout"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                tools:layout_editor_absoluteX="20dp">

                <EditText
                    android:id="@+id/search"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="100"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/gray_rounded_shape"
                    android:drawableLeft="@drawable/ic_search_gray_24dp"
                    android:drawableRight="@drawable/icon_mic"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/nexa_regular"
                    android:hint="@string/search"
                    android:padding="11dp"
                    android:textColorHint="#9ea1b0"
                    tools:ignore="TouchTargetSizeCheck"
                    />
            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/transparent"
                android:clipToPadding="false"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline6"
                app:tabBackground="@drawable/tab_color_selector"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/breaker"
                app:tabMinWidth="50dp"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="#000000"
                app:tabTextColor="#9ea1b0">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gray_rounded_shape"
                    android:text="@string/education" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/science" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gray_rounded_shape"
                    android:text="@string/psychology" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/romance" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crime" />

            </com.google.android.material.tabs.TabLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/parent_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabLayout"
                app:layout_constraintVertical_bias="1.0"
                tools:layout_editor_absoluteX="5dp"
                android:layout_marginTop="30dp"
                tools:listitem="@layout/child_rv_layout"
                app:spanCount="2"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="226dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="233dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="330dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>