<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetstartedActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shadow_bg" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:srcCompat="@drawable/logo_m" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="158dp"
        android:layout_height="288dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:srcCompat="@drawable/book1" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="172dp"
        android:layout_height="274dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:srcCompat="@drawable/book3" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="161dp"
        android:layout_height="216dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:srcCompat="@drawable/book2" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="133dp"
        android:layout_height="215dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:srcCompat="@drawable/book4" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="152dp"
        android:layout_height="193dp"
        android:layout_marginEnd="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:srcCompat="@drawable/book5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="263dp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="172dp"
        android:layout_height="230dp"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:srcCompat="@drawable/book7" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="139dp"
        android:layout_height="200dp"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/book6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started_now"
        android:fontFamily="@font/nunito_bold"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="555dp" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="139dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/breaker"
            android:fontFamily="@font/poppins"
            android:text="@string/sign_up"
            android:textSize="14sp"
            android:paddingVertical="12dp"
            android:shadowDx="0"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:shadowColor="@color/black"
            android:textStyle="bold"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/signin_btn"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:paddingVertical="12dp"
            android:textSize="14sp"
            android:textColor="@color/breaker"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/breaker"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>